Closed Bug 1884028 Opened 2 years ago Closed 2 years ago

Crash in [@ mozilla::Maybe<T>::ref | mozilla::MediaDecoderStateMachineBase::HasAudio]

Categories

(Core :: Audio/Video: Playback, defect, P1)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
Tracking Status
firefox-esr115 --- disabled
firefox123 --- disabled
firefox124 --- disabled
firefox125 --- disabled
firefox126 --- fixed

People

(Reporter: RyanVM, Assigned: alwu)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/f9c44271-3beb-4945-b6bc-d84760240306

MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(isSome())

Top 10 frames of crashing thread:

0  xul.dll  AnnotateMozCrashReason  mfbt/Assertions.h:46
0  xul.dll  mozilla::Maybe<mozilla::MediaInfo>::ref const  mfbt/Maybe.h:801
0  xul.dll  mozilla::MediaDecoderStateMachineBase::HasAudio const  dom/media/MediaDecoderStateMachineBase.h:175
0  xul.dll  mozilla::ExternalEngineStateMachine::RecoverFromCDMProcessCrashIfNeeded  dom/media/ExternalEngineStateMachine.cpp:1139
1  xul.dll  mozilla::ExternalEngineStateMachine::NotifyErrorInternal  dom/media/ExternalEngineStateMachine.cpp:1117
2  xul.dll  mozilla::ExternalEngineStateMachine::NotifyError::<lambda_1>::operator const  dom/media/ExternalEngineStateMachine.h:88
2  xul.dll  mozilla::detail::RunnableFunction<`lambda at /builds/worker/workspace/obj-build/dist/include/ExternalEngineStateMachine.h:88:9'>::Run  xpcom/threads/nsThreadUtils.h:548
3  xul.dll  mozilla::TaskQueue::Runner::Run  xpcom/threads/TaskQueue.cpp:257
4  xul.dll  nsThreadPool::Run  xpcom/threads/nsThreadPool.cpp:341
5  xul.dll  nsThread::ProcessNextEvent  xpcom/threads/nsThread.cpp:1193
Assignee: nobody → alwu
Blocks: mf-playback
Severity: -- → S3
Priority: -- → P1

It's possible that the MFCDM process crashes during the init engine
state, eg. bug 1883738, so we should handle this properly.

Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/966d648864f0 handle crash for the init engine state. r=media-playback-reviewers,padenot
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch

Still see crashes, will add another patch to handle that.

Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Target Milestone: 125 Branch → ---

I think bug 1885959 would fix the rest of crashes, I will keep observing this crash after landing that bug.

Didn't see any crashes these days, I believe this has been fixed by bug 1885959.

Status: REOPENED → RESOLVED
Closed: 2 years ago2 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: