Bug 1884028 - handle crash for the init engine state. r=media-playback-reviewers,padenot

It's possible that the MFCDM process can crash during the init engine
state, that might mean the media engine playback is not supported on the
machine. We should just stop and fallback to another playback pipeline.

Differential Revision: https://phabricator.services.mozilla.com/D204442